--- a/report/references.bib
+++ b/report/references.bib
@@ -1,3 +1,87 @@
+
+@misc{demaine_phutball_2001,
+	title = {Phutball {Endgames} are {Hard}},
+	url = {http://arxiv.org/abs/cs/0008025},
+	doi = {10.48550/arXiv.cs/0008025},
+	abstract = {We show that, in John Conway’s board game Phutball (or Philosopher’s Football), it is NPcomplete to determine whether the current player has a move that immediately wins the game. In contrast, the similar problems of determining whether there is an immediately winning move in checkers, or a move that kings a man, are both solvable in polynomial time.},
+	language = {en},
+	urldate = {2025-08-22},
+	publisher = {arXiv},
+	author = {Demaine, Erik D. and Demaine, Martin L. and Eppstein, David},
+	month = jul,
+	year = {2001},
+	note = {arXiv:cs/0008025},
+	keywords = {Computer Science - Computational Complexity, Computer Science - Computer Science and Game Theory},
+	annote = {Comment: 9 pages, 8 figures. Revised to include additional references on the complexity of checkers},
+	file = {PDF:/mnt/kosmos/documents/Zotero/storage/2NJAR3WA/Demaine et al. - 2001 - Phutball Endgames are Hard.pdf:application/pdf},
+}
+
+@incollection{goos_integer_2001,
+	address = {Berlin, Heidelberg},
+	title = {Integer {Programming} {Based} {Algorithms} for {Peg} {Solitaire} {Problems}},
+	volume = {2063},
+	isbn = {978-3-540-43080-3 978-3-540-45579-0},
+	url = {http://link.springer.com/10.1007/3-540-45579-5_15},
+	abstract = {Peg solitaire is a one player game using pegs and a board with some holes. The game is classical, and nowadays sold in many parts of the world under the trade name of Hi-Q.},
+	language = {en},
+	urldate = {2025-08-22},
+	booktitle = {Computers and {Games}},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Kiyomi, Masashi and Matsui, Tomomi},
+	editor = {Goos, Gerhard and Hartmanis, Juris and Van Leeuwen, Jan and Marsland, Tony and Frank, Ian},
+	year = {2001},
+	doi = {10.1007/3-540-45579-5_15},
+	note = {Series Title: Lecture Notes in Computer Science},
+	pages = {229--240},
+	file = {PDF:/mnt/kosmos/documents/Zotero/storage/M5XLA2IT/Kiyomi and Matsui - 2001 - Integer Programming Based Algorithms for Peg Solitaire Problems.pdf:application/pdf},
+}
+
+@article{battigalli_mathematical_nodate,
+	title = {Mathematical {Language} and {Game} {Theory}},
+	abstract = {This note complements Game Theory: Analysis of Strategic Thinking, explaining in a concise and systematic way its mathematical language. The reader should try to prove all the claims, remarks etc. that are reported here without proof.},
+	language = {en},
+	author = {Battigalli, Pierpaolo},
+	file = {PDF:/mnt/kosmos/documents/Zotero/storage/SQ96AS64/Battigalli - Mathematical Language and Game Theory.pdf:application/pdf},
+}
+
+@article{schaeffer_checkers_2007,
+	title = {Checkers {Is} {Solved}},
+	volume = {317},
+	issn = {0036-8075, 1095-9203},
+	url = {https://www.science.org/doi/10.1126/science.1144079},
+	doi = {10.1126/science.1144079},
+	abstract = {The game of checkers has roughly 500 billion billion possible positions (5 × 10
+              20
+              ). The task of solving the game, determining the final result in a game with no mistakes made by either player, is daunting. Since 1989, almost continuously, dozens of computers have been working on solving checkers, applying state-of-the-art artificial intelligence techniques to the proving process. This paper announces that checkers is now solved: Perfect play by both sides leads to a draw. This is the most challenging popular game to be solved to date, roughly one million times as complex as Connect Four. Artificial intelligence technology has been used to generate strong heuristic-based game-playing programs, such as Deep Blue for chess. Solving a game takes this to the next level by replacing the heuristics with perfection.},
+	language = {en},
+	number = {5844},
+	urldate = {2025-08-24},
+	journal = {Science},
+	author = {Schaeffer, Jonathan and Burch, Neil and Björnsson, Yngvi and Kishimoto, Akihiro and Müller, Martin and Lake, Robert and Lu, Paul and Sutphen, Steve},
+	month = sep,
+	year = {2007},
+	pages = {1518--1522},
+	file = {PDF:/mnt/kosmos/documents/Zotero/storage/KJAIQAM4/Schaeffer et al. - 2007 - Checkers Is Solved.pdf:application/pdf},
+}
+
+@misc{demaine_playing_2008,
+	title = {Playing {Games} with {Algorithms}: {Algorithmic} {Combinatorial} {Game} {Theory}},
+	shorttitle = {Playing {Games} with {Algorithms}},
+	url = {http://arxiv.org/abs/cs/0106019},
+	doi = {10.48550/arXiv.cs/0106019},
+	abstract = {Combinatorial games lead to several interesting, clean problems in algorithms and complexity theory, many of which remain open. The purpose of this paper is to provide an overview of the area to encourage further research. In particular, we begin with general background in Combinatorial Game Theory, which analyzes ideal play in perfect-information games, and Constraint Logic, which provides a framework for showing hardness. Then we survey results about the complexity of determining ideal play in these games, and the related problems of solving puzzles, in terms of both polynomial-time algorithms and computational intractability results. Our review of background and survey of algorithmic results are by no means complete, but should serve as a useful primer.},
+	language = {en},
+	urldate = {2025-08-24},
+	publisher = {arXiv},
+	author = {Demaine, Erik D. and Hearn, Robert A.},
+	month = apr,
+	year = {2008},
+	note = {arXiv:cs/0106019},
+	keywords = {Computer Science - Data Structures and Algorithms, Computer Science - Computational Complexity, Computer Science - Discrete Mathematics, Mathematics - Combinatorics},
+	annote = {Comment: 42 pages, 18 figures. Major revision to survey, and new author. To appear in Games of No Chance III},
+	file = {PDF:/mnt/kosmos/documents/Zotero/storage/HZY4UDKP/Demaine and Hearn - 2008 - Playing Games with Algorithms Algorithmic Combinatorial Game Theory.pdf:application/pdf},
+}
+
 @article{jefferson_modelling_2006,
 	title = {Modelling and solving {English} {Peg} {Solitaire}},
 	volume = {33},
@@ -15,6 +99,100 @@
 	year = {2006},
 	pages = {2935--2959},
 	file = {PDF:/mnt/kosmos/documents/Zotero/storage/GHX8Q235/Jefferson et al. - 2006 - Modelling and solving English Peg Solitaire.pdf:application/pdf},
+}
+
+@article{engbers_reversible_2015,
+	title = {Reversible peg solitaire on graphs},
+	volume = {338},
+	issn = {0012-365X},
+	url = {https://www.sciencedirect.com/science/article/pii/S0012365X15001855},
+	doi = {10.1016/j.disc.2015.05.012},
+	abstract = {The game of peg solitaire on graphs was introduced by Beeler and Hoilman in 2011. In this game, pegs are initially placed on all but one vertex of a graph G. If xyz forms a path in G and there are pegs on vertices x and y but not z, then a jump places a peg on z and removes the pegs from x and y. A graph is called solvable if, for some configuration of pegs occupying all but one vertex, some sequence of jumps leaves a single peg. We study the game of reversible peg solitaire, where there are again initially pegs on all but one vertex, but now both jumps and unjumps (the reversal of a jump) are allowed. We show that in this game all non-star graphs that contain a vertex of degree at least three are solvable, that cycles and paths on n vertices, where n is divisible by 2 or 3, are solvable, and that all other graphs are not solvable. We also classify the possible starting hole and ending peg positions for solvable graphs.},
+	number = {11},
+	urldate = {2025-08-29},
+	journal = {Discrete Mathematics},
+	author = {Engbers, John and Stocker, Christopher},
+	month = nov,
+	year = {2015},
+	keywords = {05C57, Graph games, Peg solitaire},
+	pages = {2014--2019},
+	file = {ScienceDirect Full Text PDF:/mnt/kosmos/documents/Zotero/storage/AGBWP7V7/Engbers and Stocker - 2015 - Reversible peg solitaire on graphs.pdf:application/pdf;ScienceDirect Snapshot:/mnt/kosmos/documents/Zotero/storage/LBUZV65I/S0012365X15001855.html:text/html},
+}
+
+@article{bell_fresh_2007,
+	title = {A {Fresh} {Look} at {Peg} {Solitaire}},
+	volume = {80},
+	issn = {0025-570X, 1930-0980},
+	url = {https://www.tandfonline.com/doi/full/10.1080/0025570X.2007.11953446},
+	doi = {10.1080/0025570X.2007.11953446},
+	language = {en},
+	number = {1},
+	urldate = {2025-08-29},
+	journal = {Mathematics Magazine},
+	author = {Bell, George I.},
+	month = feb,
+	year = {2007},
+	pages = {16--28},
+	file = {PDF:/mnt/kosmos/documents/Zotero/storage/AZB3B2L6/Bell - 2007 - A Fresh Look at Peg Solitaire.pdf:application/pdf},
+}
+
+@article{avis_binary_2001,
+	title = {On the binary solitaire cone},
+	volume = {115},
+	copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	issn = {0166218X},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0166218X01002116},
+	doi = {10.1016/S0166-218X(01)00211-6},
+	abstract = {The solitaire cone SB is the cone of all feasible fractional Solitaire Peg games. Valid inequalities over this cone, known as pagoda functions, were used to show the infeasibility of various peg games. The link with the well studied dual metric cone and the similarities between their combinatorial structures - see (3) - leads to the study of a dual cut cone analogue; that is, the cone generated by the \{0, 1\}-valued facets of the solitaire cone. This cone is called binary solitaire cone and denoted BSB. We give some results and conjectures on the combinatorial and geometric properties of the binary solitaire cone. In particular we prove that the extreme rays of SB are extreme rays of BSB strengthening the analogy with the dual metric cone whose extreme rays are extreme rays of the dual cut cone. Other related cones are also considered.},
+	language = {en},
+	number = {1-3},
+	urldate = {2025-08-29},
+	journal = {Discrete Applied Mathematics},
+	author = {Avis, David and Deza, Antoine},
+	month = nov,
+	year = {2001},
+	pages = {3--14},
+	annote = {Some good graphics in this one
+},
+	file = {PDF:/mnt/kosmos/documents/Zotero/storage/ERYNPBRI/Avis and Deza - 2001 - On the binary solitaire cone.pdf:application/pdf},
+}
+
+@article{nicolaas_govert_de_bruijn_solitaire_1972,
+	title = {A solitaire game and its relations to a finite field},
+	volume = {5},
+	url = {https://research.tue.nl/en/publications/a-solitaire-game-and-its-relations-to-a-finite-field},
+	language = {en},
+	journal = {Journal of Recreational Mathematics},
+	author = {{Nicolaas Govert de Bruijn}},
+	year = {1972},
+	pages = {133--137},
+	file = {PDF:/mnt/kosmos/documents/Zotero/storage/7497XA6R/Taira - 2008 - Degenerate Elliptic Eigenvalue Problems with Indefinite Weights.pdf:application/pdf},
+}
+
+@article{beeler_peg_2011,
+	title = {Peg solitaire on graphs},
+	volume = {311},
+	issn = {0012-365X},
+	url = {https://www.sciencedirect.com/science/article/pii/S0012365X11003153},
+	doi = {10.1016/j.disc.2011.07.006},
+	abstract = {There have been several papers on the subject of traditional peg solitaire on different boards. However, in this paper we consider a generalization of the game to arbitrary boards. These boards are treated as graphs in the combinatorial sense. We present necessary and sufficient conditions for the solvability of several well-known families of graphs. In the major result of this paper, we show that the cartesian product of two solvable graphs is likewise solvable. Several related results are also presented. Finally, several open problems related to this study are given.},
+	number = {20},
+	urldate = {2025-08-30},
+	journal = {Discrete Mathematics},
+	author = {Beeler, Robert A. and Paul Hoilman, D.},
+	month = oct,
+	year = {2011},
+	keywords = {Peg solitaire, Combinatorial games, Graph theory},
+	pages = {2198--2202},
+	file = {ScienceDirect Full Text PDF:/mnt/kosmos/documents/Zotero/storage/F73XLQNY/Beeler and Paul Hoilman - 2011 - Peg solitaire on graphs.pdf:application/pdf;ScienceDirect Snapshot:/mnt/kosmos/documents/Zotero/storage/PN2XXD8L/S0012365X11003153.html:text/html},
+}
+
+@misc{thomas_hurst_bloom_nodate,
+	title = {Bloom {Filter} {Calculator}},
+	url = {https://hur.st/bloomfilter/},
+	urldate = {2025-08-31},
+	author = {{Thomas Hurst}},
+	file = {Bloom filter calculator:/mnt/kosmos/documents/Zotero/storage/86PTSNBW/bloomfilter.html:text/html},
 }
 
 
