report: CPT section

--- a/report/references.bib
+++ b/report/references.bib
@@ -1,3 +1,29 @@
+@misc{wachowski_matrix_1999,
+	title = {The {Matrix}},
+	abstract = {When a beautiful stranger leads computer hacker Neo to a forbidding underworld, he discovers the shocking truth--the life he knows is the elaborate deception of an evil cyber-intelligence.},
+	publisher = {Warner Bros., Village Roadshow Pictures, Groucho Film Partnership},
+	author = {Wachowski, Lana and Wachowski, Lilly},
+	collaborator = {Wachowski, Lilly and Wachowski, Lana and Reeves, Keanu and Fishburne, Laurence and Moss, Carrie-Anne},
+	month = jun,
+	year = {1999},
+	keywords = {artificial reality, dystopia, questioning reality, simulated reality, war with machines},
+}
+
+@incollection{sozzi_parity_2007,
+	title = {Parity, {Charge} {Conjugation}, {Time} {Reversal}},
+	isbn = {978-0-19-929666-8},
+	url = {https://doi.org/10.1093/acprof:oso/9780199296668.001.0001},
+	urldate = {2025-09-02},
+	booktitle = {Discrete {Symmetries} and {CP} {Violation}: {From} {Experiment} to {Theory}},
+	publisher = {Oxford University Press},
+	collaborator = {Sozzi, Marco},
+	month = nov,
+	year = {2007},
+	doi = {10.1093/acprof:oso/9780199296668.001.0001},
+	pages = {15--194},
+}
+
+
 
 @misc{demaine_phutball_2001,
 	title = {Phutball {Endgames} are {Hard}},
