--- a/report/references.bib
+++ b/report/references.bib
@@ -1,3 +1,32 @@
+@article{bloom_spacetime_1970,
+	title = {Space/time trade-offs in hash coding with allowable errors},
+	volume = {13},
+	issn = {0001-0782, 1557-7317},
+	url = {https://dl.acm.org/doi/10.1145/362686.362692},
+	doi = {10.1145/362686.362692},
+	abstract = {In this paper trade-offs among certain computational factors in hash coding are analyzed. The paradigm problem considered is that of testing a series of messages one-by-one for membership in a given set of messages. Two new hashcoding methods are examined and compared with a particular conventional hash-coding method. The computational factors considered are the size of the hash area (space), the time required to identify a message as a nonmember of the given set (reject time), and an allowable error frequency. The new methods are intended to reduce the amount of space required to contain the hash-coded information from that associated with conventional methods. The reduction in space is accomplished by exploiting the possibility that a small fraction of errors of commission may be tolerable in some applications, in particular, applications in which a large amount of data is involved and a core resident hash area is consequently not feasible using conventional methods. In such applications, it is envisaged that overall performance could be improved by using a smaller core resident hash area in conjunction with the new methods and, when necessary, by using some secondary and perhaps time-consuming test to "catch" the small fraction of errors associated with the new methods. An example is discussed which illustrates possible areas of application for the new methods. Analysis of the paradigm problem demonstrates that allowing a small number of test messages to be falsely identified as members of the given set will permit a much smaller hash area to be used without increasing reject time.},
+	language = {en},
+	number = {7},
+	urldate = {2025-09-21},
+	journal = {Communications of the ACM},
+	author = {Bloom, Burton H.},
+	month = jul,
+	year = {1970},
+	pages = {422--426},
+	file = {PDF:/mnt/kosmos/documents/Zotero/storage/JJ38XGK6/Bloom - 1970 - Spacetime trade-offs in hash coding with allowable errors.pdf:application/pdf},
+}
+
+@misc{haas_up_2020,
+	title = {Up to {4GB} of memory in {WebAssembly}},
+	url = {https://v8.dev/blog/4gb-wasm-memory},
+	urldate = {2025-09-21},
+	journal = {V8 Blog},
+	author = {Haas, Andreas and Kummerow, Jakob and Zakai, Alon},
+	month = may,
+	year = {2020},
+	file = {Up to 4GB of memory in WebAssembly · V8:/mnt/kosmos/documents/Zotero/storage/5D2LQIFZ/4gb-wasm-memory.html:text/html},
+}
+
 @misc{wachowski_matrix_1999,
 	title = {The {Matrix}},
 	abstract = {When a beautiful stranger leads computer hacker Neo to a forbidding underworld, he discovers the shocking truth--the life he knows is the elaborate deception of an evil cyber-intelligence.},
