work on evaluation

--- a/report/references.bib
+++ b/report/references.bib
@@ -1,3 +1,19 @@
+@techreport{alakuijala_brotli_2016,
+	type = {Request for {Comments}},
+	title = {Brotli {Compressed} {Data} {Format}},
+	url = {https://datatracker.ietf.org/doc/rfc7932},
+	abstract = {This specification defines a lossless compressed data format that compresses data using a combination of the LZ77 algorithm and Huffman coding, with efficiency comparable to the best currently available general-purpose compression methods.},
+	number = {RFC 7932},
+	urldate = {2025-09-28},
+	institution = {Internet Engineering Task Force},
+	author = {Alakuijala, Jyrki and Szabadka, Zoltan},
+	month = jul,
+	year = {2016},
+	doi = {10.17487/RFC7932},
+	note = {Num Pages: 128},
+	file = {Full Text PDF:/mnt/kosmos/documents/Zotero/storage/K3F5VHYZ/Alakuijala and Szabadka - 2016 - Brotli Compressed Data Format.pdf:application/pdf},
+}
+
 @article{bloom_spacetime_1970,
 	title = {Space/time trade-offs in hash coding with allowable errors},
 	volume = {13},
