--- a/report/references.bib
+++ b/report/references.bib
@@ -135,6 +135,23 @@
 	file = {PDF:/mnt/kosmos/documents/Zotero/storage/KJAIQAM4/Schaeffer et al. - 2007 - Checkers Is Solved.pdf:application/pdf},
 }
 
+@article{aigner_moving_1997,
+	title = {Moving into the {Desert} with {Fibonacci}},
+	volume = {70},
+	issn = {0025-570X, 1930-0980},
+	url = {https://www.tandfonline.com/doi/full/10.1080/0025570X.1997.11996492},
+	doi = {10.1080/0025570X.1997.11996492},
+	language = {en},
+	number = {1},
+	urldate = {2025-09-02},
+	journal = {Mathematics Magazine},
+	author = {Aigner, Martin},
+	month = feb,
+	year = {1997},
+	pages = {11--21},
+	file = {PDF:/mnt/kosmos/documents/Zotero/storage/QW96ZUVE/Aigner - 1997 - Moving into the Desert with Fibonacci.pdf:application/pdf},
+}
+
 @misc{demaine_playing_2008,
 	title = {Playing {Games} with {Algorithms}: {Algorithmic} {Combinatorial} {Game} {Theory}},
 	shorttitle = {Playing {Games} with {Algorithms}},
@@ -266,90 +283,14 @@
 	file = {Bloom filter calculator:/mnt/kosmos/documents/Zotero/storage/86PTSNBW/bloomfilter.html:text/html},
 }
 
-
-
-% Journal article
-@article{example-journal-article,
-  author = {A. Alpha and B. Beta and C. Gamma and D. Delta and E. Eta and F. Zeta},
-  title = {New techniques in accelerators},
-  journal = {Nucl. Instrum. Methods Phys. Res. A},
-  volume = {12},
-  number = {34},
-  pages = {56-78},
-  date = {2009},
-  doi = {10.1016/1234-5678-9},
+@incollection{berlekamp_winning_1982,
+	address = {London},
+	title = {Winning ways for your mathematical plays. 2: {Games} in particular},
+	isbn = {978-0-12-091152-3},
+	shorttitle = {Winning ways for your mathematical plays. 2},
+	language = {eng},
+	publisher = {Academic Press},
+	author = {Berlekamp, Elwyn R. and Conway, John Horton and Guy, Richard K.},
+	year = {1982},
+	note = {Num Pages: 429},
 }
-
-% Paper in JACoW Proceedings
-@inproceedings{jacowguide,
-  author = {A. N. Author and H. Coauthor and P. Contributor},
-  title = {Preparation of Papers for {JACoW} Conferences},
-  booktitle = {Proc. IPAC'00},
-  venue = {City, Country, Month 0000},
-  pages = {000--999},
-  doi = {10.18429/JACoW-XXXX},
-}
-
-% Report
-@techreport{example-report,
-  author = {Z. C. Omega},
-  title = {Title of report},
-  address = {CERN, Geneva, Switzerland},
-  number = {NR-123-XYZ},
-  date = {1999-01},
-  url = {https://cds.cern.ch/record/00000}
-}
-
-% Website
-@online{jacow.org,
-  title = {Joint Accelerator Conferences Website (JACoW)},
-
-  url = {https://jacow.org/}
-}
-
-% Software
-@software{typst,
-  author = {Mädje, Laurenz and Haug, Martin and {The Typst Project Developers}},
-  license = {Apache-2.0},
-  title = {{Typst}},
-  url = {https://github.com/typst/typst}
-}
-
-% Book
-@book{example-book,
-  author = {A. Writer},
-  title = {Title of Book},
-  address = {Cambridge, MA, USA},
-  publisher = {MIT Press},
-  year = {2000},
-}
-
-% Book chapter
-@inbook{example-book-chapter,
-  author = {A. Writer},
-  title = {Title of chapter in the book},
-  booktitle = {Title of Book},
-  editor = {E. Orial},
-  address = {New York, NY, USA},
-  publisher = {Wiley},
-  year = {2000},
-  pages = {100-200},
-}
-
-% Thesis
-@thesis{example-thesis,
-  author = {A. Student},
-  title = {Title of thesis},
-  type = {Ph.D. thesis},
-  school = {Phys. Dept., Karlsruher Institut für Technologie},
-  address = {Karlsruhe, Germany},
-  year = {2014},
-}
-
-% Paper at same conference
-@unpublished{example-jacow-unpublished,
-  author = {A. N. Author and B. Coauthor},
-  title = {A talk at the same conference},
-  note = {presented at IPAC’00, City, Country, Jan. 2000, paper ABC123, this conference},
-}
-
